fix: resolve N+1 queries in listMyCities and findActiveCities